--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,30 @@
         "stdint-gcc.h": "c",
         "ftdi_atomic.h": "c",
         "locale": "c",
-        "string": "c"
+        "string": "c",
+        "array": "c",
+        "bitset": "c",
+        "string_view": "c",
+        "initializer_list": "c",
+        "ranges": "c",
+        "utility": "c",
+        "__hash_table": "c",
+        "__split_buffer": "c",
+        "__tree": "c",
+        "deque": "c",
+        "iterator": "c",
+        "list": "c",
+        "map": "c",
+        "queue": "c",
+        "random": "c",
+        "set": "c",
+        "stack": "c",
+        "unordered_map": "c",
+        "vector": "c",
+        "diagnostics.h": "c"
+    },
+    "files.exclude": {
+        "**/.o": true,
+        "./ser_ftdi/*.o": true
     }
 }
