--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,7 +33,28 @@
         "stack": "c",
         "unordered_map": "c",
         "vector": "c",
-        "diagnostics.h": "c"
+        "diagnostics.h": "c",
+        "util_common.h": "c",
+        "kmc_rec_protocol.h": "c",
+        "protocol_common.h": "c",
+        "fcp_term.h": "c",
+        "__mutex_base": "c",
+        "mutex": "c",
+        "memory": "c",
+        "chrono": "c",
+        "compare": "c",
+        "functional": "c",
+        "istream": "c",
+        "ostream": "c",
+        "ratio": "c",
+        "tuple": "c",
+        "type_traits": "c",
+        "__functional_base": "c",
+        "__functional_base_03": "c",
+        "__tuple": "c",
+        "filesystem": "c",
+        "limits": "c",
+        "types.h": "c"
     },
     "files.exclude": {
         "**/.o": true,
