--- a/configure.ac
+++ b/configure.ac
@@ -8,6 +8,22 @@ AC_CONFIG_AUX_DIR([build-aux])
 # init automake
 AM_INIT_AUTOMAKE([1.11])
 
+#lets control all CFLAGS ourselves
+CFLAGS=""
+
+AC_ARG_ENABLE(debug,
+AS_HELP_STRING([--enable-debug],
+               [enable debugging, default: no]),
+[case "${enableval}" in
+             yes) debug=true ;;
+             no)  debug=false ;;
+             *)   AC_MSG_ERROR([bad value ${enableval} for --enable-debug]) ;;
+esac],
+[debug=false])
+
+
+
+AM_CONDITIONAL(DEBUG, test x"$debug" = x"true")
 
 #configure and create "Makefile"
 #find and probe C compiler
