--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -54,7 +54,8 @@
         "__tuple": "c",
         "filesystem": "c",
         "limits": "c",
-        "types.h": "c"
+        "types.h": "c",
+        "diagnostics_util.h": "c"
     },
     "files.exclude": {
         "**/.o": true,
