--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -61,7 +61,13 @@
         "pthread.h": "c",
         "string.h": "c",
         "unistd.h": "c",
-        "ftdi_listener.h": "c"
+        "ftdi_listener.h": "c",
+        "socket_com.h": "c",
+        "winnt.h": "c",
+        "system_error": "c",
+        "config.h": "c",
+        "__locale": "c",
+        "thread": "c"
     },
     "files.exclude": {
         "**/.o": true,
