--- a/ser_ftdi/Makefile.am
+++ b/ser_ftdi/Makefile.am
@@ -1,5 +1,5 @@
 _AM_CFLAGS = $(EXTRA_CFLAGS) -I$(top_srcdir)/CDM_v2.12.36.4_WHQL_Certified
-LDADD = $(EXTRA_LDFLAGS) -L$(top_srcdir)/CDM_v2.12.36.4_WHQL_Certified/amd64/ -lftd2xx$(HOST_OS_FLAG)
+LDADD = $(EXTRA_LDFLAGS) -L$(top_srcdir)/CDM_v2.12.36.4_WHQL_Certified/amd64/ -lftd2xx$(HOST_OS_FLAG) -lzmq
 LIB = 
 
 if DEBUG
@@ -12,4 +12,19 @@ endif
 
 bin_PROGRAMS = ser_ftdi
 
-ser_ftdi_SOURCES = util_common.c atomic_queue.c diagnostics_util.c ftdi_connect.c ftdi_atomic.c diag_frame_protocol.c fcp_frame_protocol.c kmc_rec_protocol.c ftdi_term.c fcp_term.c ftdi_listener.c ser_ftdi.c
+ser_ftdi_SOURCES = \
+diagnostics_util.c  \
+ftdi_listener.c  \
+ftdi_connect.c  \
+ftdi_atomic.c  \
+socket_term.c \
+socket_com.c  \
+util_common.c  \
+atomic_queue.c  \
+diag_frame_protocol.c  \
+fcp_frame_protocol.c  \
+kmc_rec_protocol.c  \
+ftdi_term.c  \
+fcp_term.c  \
+msg_handler.c \
+ser_ftdi.c 
