--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -74,7 +74,8 @@
         "protocol_config.h": "c",
         "fcp_frame_protocol.h": "c",
         "protocol_diag.h": "c",
-        "typeinfo": "c"
+        "typeinfo": "c",
+        "atomic_queue.h": "c"
     },
     "files.exclude": {
         "**/.o": true,
